--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="keywords" content="Web Design & Development Agency" />
-    <meta name="description" content="Neomik | Web Design & Development Agency" />
+    <meta name="keywords" content="Web Design & Development" />
+    <meta name="description" content="Miki | Web Design & Development" />
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>Neomik | Services</title>
+    <title>Miki Arsov | Web Developer
+    </title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.png" />
@@ -36,7 +37,16 @@
     <!-- ==================== Start Loading ==================== -->
 
   <div class="loading">
-        <img style="width: 250px;" src="img/logoloading.png" alt="logo">
+    <span class="color-font fw-600">M</span>
+    <span class="color-font fw-600">I</span>
+    <span class="color-font fw-600">K</span>
+    <span class="color-font fw-600">I</span>
+    <span class="color-font fw-600"></span>
+    <span class="color-font fw-600">A</span>
+    <span class="color-font fw-600">R</span>
+    <span class="color-font fw-600">S</span>
+    <span class="color-font fw-600">O</span>
+    <span class="color-font fw-600">V</span>
     </div>
 
     <div id="preloader">
@@ -62,76 +72,6 @@
 
     <!-- ==================== End cursor ==================== -->
 
-    <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "108291978804461");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v15.0'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
-
-    <!-- ==================== Start Navbar ==================== -->
-
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-
-            <!-- Logo -->
-            <a class="logo" href="index.html">
-                <img style="width: 200px;" src="img/logonew.png" alt="logo">
-            </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-bar"><i class="fas fa-bars"></i></span>
-            </button>
-
-            <!-- navbar links -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                                   <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="testimonials.html">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- ==================== End Navbar ==================== -->
-
-
     <!-- ==================== Start About ==================== -->
 
     <section class="feat sub-bg section-padding">
@@ -151,7 +91,7 @@
                             <i class="ion-ios-monitor"></i>
                         </span>
                         <h5>Website Development</h5>
-                        <p>We help you custom design, develop,  and create your website for your business.</p>
+                        <p>I will help you custom design, develop,  and create your website for your business.</p>
                         <a class="more-stroke"><span></span></a>
                     </div>
                 </div>
@@ -182,7 +122,7 @@
                             <i class="ion-ios-color-wand"></i>
                         </span>
                         <h5>Hosting Services</h5>
-                        <p>We will help you setup a hosting plan and a domain for your website.</p>
+                        <p>I will help you setup a hosting plan and a domain for your website.</p>
                         <a class="more-stroke"><span></span></a>
                     </div>
                 </div>
@@ -256,10 +196,10 @@
                 <div class="col-lg-6 offset-lg-1 valign">
                     <div class="content">
                         <h6 class="stit mb-30"><span class="left"></span>Design & Development</h6>
-                        <h2 class="mb-30">We got you covered</h2>
-                        <p class="color-font fw-600">Our Design & Development setup takes care of all your needs from, finding the best hosting provider, setting up your domain and business email to, creating and
+                        <h2 class="mb-30">I got you covered</h2>
+                        <p class="color-font fw-600">The Design & Development setup takes care of all your needs from, finding the best hosting provider, setting up your domain and business email to, creating and
                             designing the custom tailored website for your business, setting up google analytics and setting up all the functionality that your business needs, while providing
-                            complete overview for the client during the construction of the website. Also providing complete website maintenance within your preferred duration.
+                            complete overview for you during the construction of the website. Also providing complete website maintenance within your preferred duration.
                         </p>
 
                         <div class="list-feat mt-40">
@@ -278,7 +218,7 @@
                     <div class="content md-mb50">
                         <h6 class="stit mb-30"><span class="left"></span>Social Media Services</h6>
                         <h2 class="mb-30">Everything you need</h2>
-                        <p class="color-font fw-600">Connecting Social Media accounts and Marketing setup for your business, depending on demographic location, we will create successful ads to run 
+                        <p class="color-font fw-600">Connecting Social Media accounts and Marketing setup for your business, depending on demographic location, I will create successful ads to run 
                             and target the specific audience that your business needs with your own preferred budget, making a great return on your investment
                             and helping your business succeed.
                         </p>
@@ -308,10 +248,10 @@
                     <div class="content">
                         <h6 class="stit mb-30"><span class="left"></span>Dropshipping Services</h6>
                         <h2 class="mb-30">The whole nine yards</h2>
-                        <p class="color-font fw-600">Our Dropshipping setup takes care of everything from, finding the best suppliers and products, setting up your online store to, connecting your 
+                        <p class="color-font fw-600">The Dropshipping setup takes care of everything from, finding the best suppliers and products, setting up your online store to, connecting your 
                             payment provider and providing quantity tracking, custom creating and designing your online store setting up all the necessary requirements, privacy, refund and shipping policies
                              while providing
-                            complete overview for the client. Also providing guidance to help you learn how to manage your online store.
+                            complete overview for you. Also providing guidance to help you learn how to manage your online store.
                         </p>
 
                         <div class="list-feat mt-40">
@@ -334,24 +274,6 @@
 
     <!-- ==================== Start call-to-action ==================== -->
 
-    <section class="call-action section-padding bg-img" data-background="img/patrn.svg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-lg-9">
-                    <div class="content sm-mb30">
-                        <h6 class="wow" data-splitting>Let’s Talk</h6>
-                        <h2 class="wow" data-splitting>about your <br> <b class="back-color">next project</b>.</h2>
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-lg-3 valign">
-                    <a href="contact.html" class="butn bord curve wow fadeInUp" data-wow-delay=".5s"><span>Get In
-                            Touch</span></a>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
     <!-- ==================== End call-to-action ==================== -->
 
@@ -362,19 +284,19 @@
     <footer class="sub-bg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="item">
                         <div class="logo">
-                            <img style="width:250px !important;" src="img/logonew.png" alt="">
+                            <h2 class="color-font">Social Media</h2>
                         </div>
                         <div class="social">
-                            <a href="https://www.facebook.com/profile.php?id=100088844861552"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/neomik.inc"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/company/neomik-web-design-development"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/mikica.e"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.instagram.com/miki.arsovv"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/miki-arsov-full-stack"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="item md-mb50 mt-10">
                         <div class="title">
                             <h5>Contact Us</h5>
@@ -389,50 +311,11 @@
                                 </div>
                             </li>
                             <li>
-                                <span class="icon pe-7s-map-marker"></span>
-                                <div class="cont">
-                                    <h6>Address</h6>
-                                    <p>Delaware Divison,
-                                        Opening soon</p>
-                                </div>
-                            </li>
-                            <li>
                                 <span class="icon pe-7s-mail"></span>
                                 <div class="cont">
                                     <h6>Email</h6>
-                                    <p>info@neomik.com</p>
+                                    <p>mikica.ee@gmail.com</p>
                                 </div>
-                            </li>
-                            <li>
-                                <span class="icon pe-7s-call"></span>
-                                <div class="cont">
-                                    <h6>Get in Touch</h6>
-                                    <a href="https://api.whatsapp.com/send?phone=+38978909720" >@Whatsapp</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="item md-mb50 mt-10">
-                        <div class="title">
-                            <h5>Quick Links</h5>
-                        </div>
-                        <ul>
-                            <li class="nav-item">
-                                <a href="index.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="about.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="services.html">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="testimonials.html">Testimonials</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -442,7 +325,7 @@
                 <div class="col-lg-12">
                     <div class="item">
                         <div class="copy-right text-center">
-                            <p>© 2023. All Rights Reserved. Designed & Developed By <a href="#0">Neomik</a>.</p>
+                            <p>© 2023. All Rights Reserved. Designed & Developed By <a href="#0">Miki</a>.</p>
                         </div>
                     </div>
                 </div>
