--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="col-lg-8 col-md-10">
                     <div class="sec-head">
                         <h6 class="wow fadeIn" data-wow-delay=".5s">Best Services</h6>
-                        <h3 class="wow color-font">Making your business ideas a reality</h3>
+                        <h3 class="wow color-font">Making your website ideas a reality</h3>
                     </div>
                 </div>
             </div>
