--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-8 col-md-10">
                     <div class="sec-head">
-                        <h6 class="wow fadeIn" data-wow-delay=".5s">Best Services</h6>
+                        <h6 class="wow fadeIn" data-wow-delay=".5s">My Services</h6>
                         <h3 class="wow color-font">Making your website ideas a reality</h3>
                     </div>
                 </div>
