--- a/index.html
+++ b/index.html
@@ -73,7 +73,27 @@
     <!-- ==================== End cursor ==================== -->
 
     <!-- ==================== Start About ==================== -->
-
+    <header class="slider-st valign position-re">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 valign">
+                    <div class="cont md-mb50">
+                        <div class="sub-title mb-5">
+                            <h6>You will love working with Me</h6>
+                        </div>
+                        <h1 class="mb-10 fw-600">Let’s create something great together.</h1>
+                        <p>Making the world a better place one idea at a time. I bring your ideas to life.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="img">
+                        <img src="img/slid/about.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="line bottom left"></div>
+    </header>
     <section class="feat sub-bg section-padding">
         <div class="container">
             <div class="row">
