added client changes

--- a/index.html
+++ b/index.html
@@ -289,11 +289,96 @@
         <div class="circle-blur"></div>
         <div class="circle-blur two"></div>
     </section>
+    
 
     <!-- ==================== End Services ==================== -->
 
     <!-- ==================== Start call-to-action ==================== -->
-
+       <section class="clients head-pb">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 valign md-mb50">
+                    <div class="sec-head mb-0">
+                        <h6 class="wow fadeIn" data-wow-delay=".5s">Featured</h6>
+                        <h3 class="wow mb-20 color-font">My Clients</h3>
+                        <p>A better tomorrow begins with innovation today.</p>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div>
+                        <div class="row bord">
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/01.png" alt="">
+                                        <a href="https://akcija.com.mk" class="link" data-splitting>akcija.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".6s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/02.png" alt="">
+                                        <a href="https://whirlyvision.com" class="link" data-splitting>whirlyvision.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".8s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/03.png" alt="">
+                                        <a href="https://taslom.com" class="link" data-splitting>taslom.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/04.png" alt="">
+                                        <a href="https://permaculturelife.com/" class="link" data-splitting>www.permaculture.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 col-6 brands sm-mb30">
+                                <div class="item wow fadeIn" data-wow-delay=".4s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/05.png" alt="">
+                                        <a href="#0" class="link" data-splitting>www.neomik.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands sm-mb30">
+                                <div class="item wow fadeIn" data-wow-delay=".7s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/06.png" alt="">
+                                        <a href="https://pioneers.org/" class="link" data-splitting>www.pioneers.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".5s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/07.png" alt="">
+                                        <a href="#0" class="link" data-splitting>www.neomik.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-6 brands">
+                                <div class="item wow fadeIn" data-wow-delay=".3s">
+                                    <div class="img">
+                                        <img src="img/clients/brands/08.png" alt="">
+                                        <a href="#0" class="link" data-splitting>www.neomik.com</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- ==================== End call-to-action ==================== -->
 
